--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hi, I am Louis, I am in a coding bootcamp and I am really enjoying the prework and cannot wait to get started with class!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Tampa, Florida</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy playing video games, reading, and sports.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job would be playing Video Games professionally, or to be writing code on them.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently live in Seattle, Washington</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I have always had a passion for coding and this is my first big step on my journey!</p>
     </section>
 
     <footer id="footer">
